<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Sutori</string>
    <string name="login_heading">Sign in to your account</string>
    <string name="login_subheading">Sign in to get exclusive access to a world which is all yours.</string>
    <string name="error_email">Invalid e-mail</string>
    <string name="name_label">Name</string>
    <string name="email_label">E-mail</string>
    <string name="password_label">Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="signin">Sign In</string>
    <string name="register_subheading">Don\'t miss out on this great opportunity! Join us by registering now.</string>
    <string name="error_password_length">Password less than 8 characters</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="error">Error</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>
    <string name="camera_title">Camera</string>
    <string name="gallery_title">Gallery</string>
    <string name="description_story">Description</string>
    <string name="send_title">Send</string>
    <string name="add_story_title">Add Story</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="loading" translatable="false">Loading...</string>
    <string name="unknown_error" translatable="false">Unknown Error</string>
    <string name="detail_story">Detail Story</string>
    <string name="title_logout">Logout</string>
    <string name="title_change_language">Change Language</string>
    <string name="login_success">Login Success</string>
    <string name="register_success">Register Success</string>
    <string name="maps_title" translatable="false">Maps</string>
    <string name="retry">Retry</string>
    <string name="normal_type" translatable="false">Normal</string>
    <string name="satellite_type" translatable="false">Satellite</string>
    <string name="terrain_type" translatable="false">Terrain</string>
    <string name="hybrid_type" translatable="false">Hybrid</string>
</resources>