<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.add.AddStoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorPrimary"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="@string/add_story_title"
                app:titleCentered="true"
                app:titleTextColor="?attr/colorOnPrimary" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/iv_story_wrapper"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar">

            <ImageView
                android:id="@+id/iv_story"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorOnPrimary"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_image" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/source_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_story_wrapper">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/camera_title"
                app:icon="@drawable/ic_camera" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/gallery_title"
                app:icon="@drawable/ic_folder" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/description_story"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/source_wrapper" />

        <EditText
            android:id="@+id/ed_add_description"
            style="@style/CustomInputStyle"
            android:layout_height="100dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:autofillHints="Description"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/source_wrapper"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="LabelFor,RtlHardcoded" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/send_title"
            app:icon="@drawable/ic_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_add_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>